[gd_scene load_steps=16 format=3 uid="uid://d1a6y8skg7kii"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_1qd6f"]
[ext_resource type="Texture2D" uid="uid://x8dlbc44xtj5" path="res://textures/UI/Main Menu.svg" id="2_0g7ge"]
[ext_resource type="AudioStream" uid="uid://rimplcys6c2t" path="res://sound/music/_Main Menu_ The Big Grid, Pirate Software Gamejam 15.ogg" id="2_fi6st"]
[ext_resource type="PackedScene" uid="uid://c4bi8m84gcg7c" path="res://scenes/OptionsMenu/options_menu.tscn" id="3_8lr38"]
[ext_resource type="Theme" uid="uid://cps7x1u8q74lh" path="res://scenes/MainMenu.tres" id="3_x1hb5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0gc0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fyt6n"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 10.0
bg_color = Color(0.780392, 0.462745, 0.796078, 0.152941)
border_width_bottom = 2
border_color = Color(0.74902, 0.803922, 0.901961, 0)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 10
expand_margin_left = 40.0
expand_margin_top = 10.0
expand_margin_right = 40.0
expand_margin_bottom = 10.0
shadow_color = Color(0.717647, 0.945098, 1, 0.215686)
shadow_size = 10
anti_aliasing_size = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ffr6y"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v2pm"]
bg_color = Color(0.780392, 0.462745, 0.796078, 0.152941)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 30.0
expand_margin_top = 5.0
expand_margin_right = 30.0
expand_margin_bottom = 5.0
shadow_color = Color(0.717647, 0.945098, 1, 0.215686)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7abu1"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68iyd"]
bg_color = Color(0.780392, 0.462745, 0.796078, 0.152941)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 30.0
expand_margin_top = 5.0
expand_margin_right = 30.0
expand_margin_bottom = 5.0
shadow_color = Color(0.717647, 0.945098, 1, 0.215686)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wh70h"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4th38"]
bg_color = Color(0.780392, 0.462745, 0.796078, 0.152941)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 25.0
expand_margin_top = 5.0
expand_margin_right = 25.0
expand_margin_bottom = 5.0
shadow_color = Color(0.717647, 0.945098, 1, 0.215686)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgeyh"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pow8l"]
bg_color = Color(0.780392, 0.462745, 0.796078, 0.152941)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 25.0
expand_margin_top = 5.0
expand_margin_right = 25.0
expand_margin_bottom = 5.0
shadow_color = Color(0.717647, 0.945098, 1, 0.215686)
shadow_size = 5

[node name="MainMenu" type="Control" node_paths=PackedStringArray("continue_button", "load_panel", "load_buttons_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1qd6f")
continue_button = NodePath("Links/MarginContainer/VBoxContainer/ContinueButton")
load_panel = NodePath("LoadGameSelection")
load_buttons_container = NodePath("LoadGameSelection/MarginContainer/VBoxContainer")

[node name="Links" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 1293.0
offset_top = 222.0
offset_right = 1568.0
offset_bottom = 409.0

[node name="MarginContainer" type="MarginContainer" parent="Links"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Links/MarginContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="Links/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="LoadGameButton" type="Button" parent="Links/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="NewGameButton" type="Button" parent="Links/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="OptionsButton" type="Button" parent="Links/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="Links/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 51.0
offset_right = 4.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.887)
texture = ExtResource("2_0g7ge")
expand_mode = 5

[node name="ContinueButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -86.1195
offset_right = 51.0
offset_bottom = -51.1195
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.74717, 0.924086)
theme_override_styles/normal = SubResource("StyleBoxFlat_m0gc0")
theme_override_styles/hover = SubResource("StyleBoxFlat_fyt6n")

[node name="LoadGameButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -26.0833
offset_right = 32.0
offset_bottom = 4.91666
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.24037, 1.2584)
theme_override_styles/normal = SubResource("StyleBoxFlat_ffr6y")
theme_override_styles/hover = SubResource("StyleBoxFlat_1v2pm")

[node name="NewGameButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = 41.2762
offset_right = 25.0
offset_bottom = 72.2762
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.11165, 1.19857)
theme_override_styles/normal = SubResource("StyleBoxFlat_7abu1")
theme_override_styles/hover = SubResource("StyleBoxFlat_68iyd")

[node name="OptionsButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.9999
offset_top = 104.41
offset_right = 7.00012
offset_bottom = 135.41
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.44578, 1.07685)
theme_override_styles/normal = SubResource("StyleBoxFlat_wh70h")
theme_override_styles/hover = SubResource("StyleBoxFlat_4th38")

[node name="Quit" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = 163.035
offset_right = -17.0
offset_bottom = 194.035
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.45804, 1.44014)
theme_override_styles/normal = SubResource("StyleBoxFlat_lgeyh")
theme_override_styles/hover = SubResource("StyleBoxFlat_pow8l")
text = "
"

[node name="VFlowContainer" type="VFlowContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_right = 0.9
anchor_bottom = 1.0
offset_left = -289.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
alignment = 2

[node name="LoadGameSelection" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 353.0
offset_top = 112.0
offset_right = 653.0
offset_bottom = 152.0

[node name="MarginContainer" type="MarginContainer" parent="LoadGameSelection"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="LoadGameSelection/MarginContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(700, 400)
texture = ExtResource("2_0g7ge")
expand_mode = 3
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -85.0
offset_right = 113.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect2/MarginContainer"]
layout_mode = 2

[node name="Continue_Button" type="Button" parent="TextureRect2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_x1hb5")
text = "Continue"

[node name="Load_Game_Button" type="Button" parent="TextureRect2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_x1hb5")
text = "Load Game"

[node name="New_Game_Button" type="Button" parent="TextureRect2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_x1hb5")
text = "New Game"

[node name="Options_Button" type="Button" parent="TextureRect2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_x1hb5")
text = "Options"

[node name="Quit_Button" type="Button" parent="TextureRect2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_x1hb5")
text = "Quit
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_fi6st")
autoplay = true
bus = &"Music"

[node name="Options_Menu" parent="." instance=ExtResource("3_8lr38")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Links/MarginContainer/VBoxContainer/ContinueButton" to="." method="continue_game"]
[connection signal="pressed" from="Links/MarginContainer/VBoxContainer/LoadGameButton" to="." method="toggle_load_panel"]
[connection signal="pressed" from="Links/MarginContainer/VBoxContainer/NewGameButton" to="." method="new_game"]
[connection signal="pressed" from="Links/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Links/MarginContainer/VBoxContainer/Quit" to="." method="quit"]
[connection signal="pressed" from="TextureRect/ContinueButton" to="." method="continue_game"]
[connection signal="pressed" from="TextureRect/LoadGameButton" to="." method="toggle_load_panel"]
[connection signal="pressed" from="TextureRect/NewGameButton" to="." method="new_game"]
[connection signal="pressed" from="TextureRect/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="TextureRect/Quit" to="." method="quit"]
[connection signal="pressed" from="TextureRect2/MarginContainer/VBoxContainer/Continue_Button" to="." method="continue_game"]
[connection signal="pressed" from="TextureRect2/MarginContainer/VBoxContainer/Load_Game_Button" to="." method="toggle_load_panel"]
[connection signal="pressed" from="TextureRect2/MarginContainer/VBoxContainer/New_Game_Button" to="." method="new_game"]
[connection signal="pressed" from="TextureRect2/MarginContainer/VBoxContainer/Options_Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="TextureRect2/MarginContainer/VBoxContainer/Quit_Button" to="." method="quit"]
